# BikePath

./: .gitignore  BikePath.ipynb  BikePath.xxh3  README.md  pyproject.toml  test.txt  test2.txt
Hello/: BikePath Analysis.py  BikePath.ipynb  Hello.py  IND_D5555_X32021.csv  standardplot.py
data/: IND_D208_X10223_NS0_20210104.csv  IND_D208_X10223_NS0_20210111.csv  IND_D208_X10223_NS0_20210118.csv  IND_D208_X10223_NS0_20210125.csv  IND_D208_X10223_NS0_20210201.csv  IND_D208_X10223_NS0_20210208.csv  IND_D208_X10223_NS0_20210222.csv  IND_D208_X10223_NS0_20210301.csv  IND_D208_X10223_NS0_20210308.csv  IND_D208_X10223_NS0_20210315.csv  IND_D208_X10223_NS0_20210329.csv  IND_D208_X10223_NS0_20210503.csv  IND_D208_X10223_NS0_20210510.csv  IND_D208_X10223_NS0_20210517.csv  IND_D208_X10223_NS0_20210524.csv  IND_D208_X10223_NS0_20210614.csv  IND_D208_X10223_NS0_20210621.csv  IND_D208_X10223_NS0_20210705.csv  IND_D208_X10223_NS0_20210712.csv  IND_D208_X10223_NS0_20210719.csv  IND_D208_X10223_NS0_20210802.csv  IND_D208_X10223_NS0_20210809.csv  IND_D208_X10223_NS0_20210823.csv  IND_D208_X10223_NS0_20210906.csv  IND_D208_X10223_NS0_20210913.csv  IND_D208_X10223_NS0_20210920.csv  IND_D208_X10223_NS0_20210927.csv  IND_D208_X10223_NS0_20211004.csv  IND_D208_X10223_NS0_20211011.csv  IND_D208_X10223_NS0_20211025.csv  IND_D208_X10223_NS0_20211108.csv  IND_D208_X10223_NS0_20211115.csv  IND_D208_X10223_NS0_20211122.csv  IND_D208_X10223_NS0_20211129.csv  IND_D208_X10223_NS0_20211206.csv  IND_D208_X10223_NS0_20211213.csv  IND_D208_X10223_NS0_20211220.csv  IND_D208_X10223_NS0_20211227.csv  (+2443 more)
(+658 files in other folders)
